; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_switch_user_ttb.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_switch_user_ttb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@PMAP__SWITCH_USER_TTB = common dso_local global i32 0, align 4
@DBG_FUNC_START = common dso_local global i32 0, align 4
@DBG_FUNC_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmap_switch_user_ttb(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32, i32* @PMAP__SWITCH_USER_TTB, align 4
  %4 = call i32 @PMAP_CODE(i32 %3)
  %5 = load i32, i32* @DBG_FUNC_START, align 4
  %6 = or i32 %4, %5
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = call i32 @VM_KERNEL_ADDRHIDE(%struct.TYPE_5__* %7)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 (i32, i32, ...) @PMAP_TRACE(i32 1, i32 %6, i32 %8, i32 %11, i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = call i32 @pmap_switch_user_ttb_internal(%struct.TYPE_5__* %16)
  %18 = load i32, i32* @PMAP__SWITCH_USER_TTB, align 4
  %19 = call i32 @PMAP_CODE(i32 %18)
  %20 = load i32, i32* @DBG_FUNC_END, align 4
  %21 = or i32 %19, %20
  %22 = call i32 (i32, i32, ...) @PMAP_TRACE(i32 1, i32 %21)
  ret void
}

declare dso_local i32 @PMAP_TRACE(i32, i32, ...) #1

declare dso_local i32 @PMAP_CODE(i32) #1

declare dso_local i32 @VM_KERNEL_ADDRHIDE(%struct.TYPE_5__*) #1

declare dso_local i32 @pmap_switch_user_ttb_internal(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
